--- a/examples/updatecli.d/jenkins.yaml
+++ b/examples/updatecli.d/jenkins.yaml
@@ -18,15 +18,17 @@ targets:
   imageTag:
     name: "Update Jenkins docker image tag"
     kind: yaml
+    #prefix: "test-"
+    #postfix: "-jdk13"
     spec:
       file: "charts/jenkins/values.yaml"
       key: "jenkins.controller.imageTag"
     scm:
       github:
-        user: "updatecli"
-        email: "updatecli@olblak.com"
-        owner: "olblak"
-        repository: "charts"
-        token: ""
-        username: "olblak"
-        branch: "master"
+        user: "{{ .github.user }}"
+        email: "{{ .github.email }}"
+        owner: "{{ .github.owner }}"
+        repository: "{{ .github.repository }}"
+        token: "{{ requiredEnv .github.token }}"
+        username: "{{ .github.username }}"
+        branch: "{{ .github.branch }}"
