chore: refactor awsami plugin to use a constructor
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/examples/updatecli.generic/aws_ami.yaml
+++ b/examples/updatecli.generic/aws_ami.yaml
@@ -32,7 +32,8 @@ conditions:
 targets:
   file:
     name: Update fictive file
-    sourceID: ami1
+    sourceID: opensuse202006
     kind: file
     spec:
       file: /tmp/updatecli_ci_test
+      forcecreate: true
