--- a/.golangci.yml
+++ b/.golangci.yml
@@ -33,16 +33,16 @@ linters-settings:
       - wrapperFunc
   gocyclo:
     min-complexity: 15
-  goimports:
   golint:
     min-confidence: 0
   gomnd:
     settings:
       mnd:
         # don't include the "operation" and "assign"
-        checks: argument,case,condition,return
+        checks: [argument,case,condition,return]
   govet:
     check-shadowing: true
+    fieldalignment:
     settings:
       printf:
         funcs:
@@ -56,6 +56,7 @@ linters-settings:
   maligned:
     suggest-new: true
   misspell:
+    locale: US
   nolintlint:
     allow-leading-space: true   # don't require machine-readable nolint directives (i.e. with no leading space)
     allow-unused: false         # report any unused nolint directives
@@ -83,9 +84,9 @@ linters:
     - gosec
     - gosimple
     - ineffassign
-    - interfacer
+    # - interfacer # deprecated since 1.38.0
     # - lll
-    - maligned
+    # - maligned  # deprecated since 1.38.0
     - misspell
     - nakedret
     - nolintlint
@@ -118,9 +119,3 @@ run:
     - internal/cache
     - internal/renameio
     - internal/robustio
-# golangci.com configuration
-# https://github.com/golangci/golangci/wiki/Configuration
-service:
-  golangci-lint-version: 1.27.x   # Use the fixed version to not introduce new linters unexpectedly
-  prepare:
-    - echo "here I can run custom commands, but no preparation needed for this repo"
