--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -29,6 +29,10 @@ jobs:
         run: goreleaser --version
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
+        with:
+          # Used for testing purposes
+          # https://github.com/actions/checkout#fetch-all-history-for-all-tags-and-branches
+          fetch-depth: 0
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2.5.2
         with:
