--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -21,10 +21,25 @@ jobs:
         with:
           go-version: 1.17.6
         id: go
+
+      # Manage and run your integration tests with efficiency
+      # https://github.com/ovh/venom
+      - name: Install Venom
+        run: |
+          curl -o /usr/local/bin/venom https://github.com/ovh/venom/releases/download/$VENOM_VERSION/venom.linux-amd64 -L
+          sudo chmod +x /usr/local/bin/venom
+          ls -lha /usr/local/bin/venom
+        env:
+          VENOM_VERSION: v1.0.1
+
+      - name: Show Venom version
+        run: venom version
+
       - name: Install GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
           install-only: true
+
       - name: Show GoReleaser version
         run: goreleaser --version
       - name: Check out code into the Go module directory
@@ -57,6 +72,7 @@ jobs:
 
       - name: Run End to End tests
         env:
+          IS_TTY: true # https://github.com/ovh/venom#use-venom-in-ci
           # Access only to ec2 AMI api in read-only
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
