Correctly use updatecli values
Signed-off-by: Olblak <me@olblak.com>

--- a/e2e/updatecli.d/source/githubRelease.2.yaml
+++ b/e2e/updatecli.d/source/githubRelease.2.yaml
@@ -9,6 +9,6 @@ sources:
       owner: "updatecli"
       repository: "updatecli"
       token: '{{ requiredEnv .github.token }}'
-      username: '{{ requiredEnv .github.token }}'
+      username: '{{ requiredEnv .github.username }}'
       versionFilter:
         kind: "latest"
