Apply suggestions from code review
Co-authored-by: Hervé Le Meur <91831478+lemeurherve@users.noreply.github.com>

--- a/e2e/updatecli.d/source/gitTag.yaml
+++ b/e2e/updatecli.d/source/gitTag.yaml
@@ -9,11 +9,11 @@ scms:
 
 sources:
   git:
-    name: Get Latest updatecli test
+    name: Get latest updatecli test
     kind: gitTag
     scmID: updatecli
   githubRegex:
-    name: Get Latest updatecli test
+    name: Get latest updatecli test
     kind: gitTag
     spec:
       versionFilter:
