Fix jenkins e2e manifest
Signed-off-by: Olblak <me@olblak.com>

--- a/e2e/updatecli.d/jenkins.yaml
+++ b/e2e/updatecli.d/jenkins.yaml
@@ -2,8 +2,12 @@ title: "Bump Jenkins stable version"
 
 sources:
   getLatestJenkinsStable:
+    name: Get latest jenkins stable version
     kind: jenkins
+    spec:
+      release: stable
   getLatestJenkinsWeekly:
+    name: Get latest jenkins weekly version
     kind: jenkins
     spec:
       release: weekly
