cleanup(sources) remove support of the deprecated singular-source syntax
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/examples/updatecli.d/docker-compose.yaml
+++ b/examples/updatecli.d/docker-compose.yaml
@@ -1,9 +1,10 @@
-source:
-  name: "Get docker image digest for olblak/polls:latest"
-  kind: dockerDigest
-  spec:
-    image: "olblak/polls"
-    tag: "latest"
+sources:
+  lastDigest:
+    name: "Get docker image digest for olblak/polls:latest"
+    kind: dockerDigest
+    spec:
+      image: "olblak/polls"
+      tag: "latest"
 targets:
   imageTag:
     name: "updatecli docker image tag"
