--- a/examples/updatecli.generic/helmChart/noSCM.yaml
+++ b/examples/updatecli.generic/helmChart/noSCM.yaml
@@ -1,11 +1,12 @@
 # To work
-# cd /tmp 
+# cd /tmp
 # git clone https://github.com/jenkinsci/helm-charts.git
 
-source:
-  kind: jenkins
-  spec:
-    release: stable
+sources:
+  lastJenkinsStableVersion:
+    kind: jenkins
+    spec:
+      release: stable
 targets:
   chartjenkins:
     name: "jenkinsci/jenkins Helm Chart"
