--- a/examples/updatecli.generic/transformers/jenkins.yaml
+++ b/examples/updatecli.generic/transformers/jenkins.yaml
@@ -1,19 +1,20 @@
-source:
-  name: "Get latest jenkins weekly version"
-  kind: jenkins
-  transformers:
-    - addPrefix: "alpha-"
-    - addSuffix: "-jdk11"
-    - trimSuffix: "-jdk11"
-    - addSuffix: "-jdk11"
-    - replacer:
-        from: "-jdk11"
-        to: "-jdk15"
-    - replacers:
-        - from: "-jdk15"
-          to: "-jdk17"
-  spec:
-    release: weekly
+sources:
+  lastJenkinsWeeklyVersion:
+    name: "Get latest jenkins weekly version"
+    kind: jenkins
+    transformers:
+      - addPrefix: "alpha-"
+      - addSuffix: "-jdk11"
+      - trimSuffix: "-jdk11"
+      - addSuffix: "-jdk11"
+      - replacer:
+          from: "-jdk11"
+          to: "-jdk15"
+      - replacers:
+          - from: "-jdk15"
+            to: "-jdk17"
+    spec:
+      release: weekly
 targets:
   targetID:
     name: "Update file file"
