cleanup(gittag, githubrelease) remove deprecated code for version (version.Filter is used instead)
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/examples/updatecli.d/jenkins-wiki-exporter.yaml
+++ b/examples/updatecli.d/jenkins-wiki-exporter.yaml
@@ -6,7 +6,8 @@ source:
     repository: "jenkins-wiki-exporter"
     token: {{ requiredEnv "GITHUB_TOKEN" }}
     username: "olblak"
-    version: "latest"
+    versionFilter:
+      kind: latest
 conditions:
   docker:
     name: "Is Docker Image Published on Registry?"
