--- a/examples/updatecli.d/dockerfile.yaml
+++ b/examples/updatecli.d/dockerfile.yaml
@@ -7,7 +7,8 @@ source:
     repository: "helm"
     token: {{ requiredEnv .github.token }}
     username: olblak
-    version: latest
+    versionFilter:
+      kind: latest
 conditions:
   isENVSet:
     name: Is the 2nd ENV instruction having a "keyword" set to "HELM_VERSION"
