cleanup(pipeline) remove deprecated code for prefix and postfix
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/examples/updatecli.d/docker-compose.yaml
+++ b/examples/updatecli.d/docker-compose.yaml
@@ -9,9 +9,10 @@ targets:
   imageTag:
     name: "updatecli docker image tag"
     kind: "yaml"
-    prefix: "olblak/polls@256:"
     spec:
       #file: "/home/olblak/Project/Jenkins-infra/polls/docker-compose.yaml"
       file: "../../Jenkins-infra/polls/docker-compose.yamli"
       #file: "docker-compose.yamli"
       key: "services.api.image"
+    transformers:
+      - addPrefix: "olblak/polls@256:"
