--- a/examples/updatecli.d/jenkins.yaml
+++ b/examples/updatecli.d/jenkins.yaml
@@ -2,13 +2,14 @@ sources:
   lastMavenRelease:
     kind: maven
     name: "Get latest jenkins weekly version from maven repository"
-    postfix: "-jdk11"
     spec:
       owner: "maven"
       url: "repo.jenkins-ci.org"
       repository: "releases"
       groupID: "org.jenkins-ci.main"
       artifactID: "jenkins-war"
+    transformers:
+      - addSuffix: "-jdk11"
 conditions:
   docker:
     name: "Is Docker Image Published on Registry?"
@@ -19,8 +20,6 @@ targets:
   imageTag:
     name: "Update Jenkins docker image tag"
     kind: yaml
-    #prefix: "test-"
-    #postfix: "-jdk13"
     spec:
       file: "charts/jenkins/values.yaml"
       key: "jenkins.controller.imageTag"
