Revert "Rename scmID to scmid in updatecli manfest"
This reverts commit 6415caf24c0f2b4101b183562d0df0b424491cfe.

--- a/updatecli/updatecli.d/venom.yaml
+++ b/updatecli/updatecli.d/venom.yaml
@@ -34,13 +34,13 @@ targets:
       file: .github/workflows/go.yaml
       matchPattern: 'VENOM_VERSION: .*'
       content: 'VENOM_VERSION: {{ source `latestVersion` }}'
-    scmid: default
+    scmID: default
 
 pullrequests:
   default:
     title: '[updatecli] Bump Venom version to {{ source "latestVersion" }}'
     kind: github
-    scmid: default
+    scmID: default
     targets:
       - goWorkflow
     spec:
