--- a/updatecli/updatecli.d/updatecli.yaml
+++ b/updatecli/updatecli.d/updatecli.yaml
@@ -15,7 +15,7 @@ scms:
 sources:
   latestVersion:
     name: Get latest updatecli release
-    kind: githubRelease
+    kind: githubrelease
     spec:
       owner: updatecli
       repository: updatecli
@@ -28,15 +28,15 @@ targets:
     kind: file
     spec:
       file: .github/ISSUE_TEMPLATE/1-bug-report.yml
-      matchPattern: '\*\*updatecli\*\*: .*'
+      matchpattern: '\*\*updatecli\*\*: .*'
       content: '**updatecli**: {{ source `latestVersion` }}'
-    scmID: default
+    scmid: default
 
 pullrequests:
   default:
     title: '[updatecli] Bump updatecli version to {{ source "latestVersion" }}'
     kind: github
-    scmID: default
+    scmid: default
     targets:
       - bugReport
     spec:
