Update example manifest
Signed-off-by: Olblak <me@olblak.com>

--- a/examples/updatecli.d/docker-compose.yaml
+++ b/examples/updatecli.d/docker-compose.yaml
@@ -1,7 +1,7 @@
 sources:
   lastDigest:
     name: "Get docker image digest for olblak/polls:latest"
-    kind: dockerDigest
+    kind: dockerdigest
     spec:
       image: "olblak/polls"
       tag: "latest"
