--- a/examples/updatecli.d/dockerfile.yaml
+++ b/examples/updatecli.d/dockerfile.yaml
@@ -6,16 +6,16 @@ sources:
     spec:
       owner: "helm"
       repository: "helm"
-      token: {{ requiredEnv .github.token }}
-      username: olblak
+      token: '{{ requiredEnv .github.token }}'
+      username: "olblak"
       versionFilter:
-        kind: latest
+        kind: "latest"
 conditions:
   isENVSet:
-    name: Is the 2nd ENV instruction having a "keyword" set to "HELM_VERSION"
-    kind: dockerfile
+    name: 'Is the 2nd ENV instruction having a "keyword" set to "HELM_VERSION"'
+    kind: "dockerfile"
     spec:
-      file: docker/Dockerfile
+      file: "docker/Dockerfile"
       Instruction: "ENV[1][0]"
       Value: "HELM_VERSION"
     scm:
@@ -24,14 +24,14 @@ conditions:
         email: "updatecli@olblak.com"
         owner: "olblak"
         repository: "charts"
-        token: {{ requiredEnv "GITHUB_TOKEN" }}
+        token: '{{ requiredEnv "GITHUB_TOKEN" }}'
         username: "olblak"
         branch: "master"
   isARGSet:
-    name: Is there any ARG instruction starting with "HELM_VERSION"
-    kind: dockerfile
+    name: 'Is there any ARG instruction starting with "HELM_VERSION"'
+    kind: "dockerfile"
     spec:
-      file: Dockerfile
+      file: "Dockerfile"
       instruction:
         keyword: "ARG"
         matcher: "HELM_VERSION"
@@ -41,30 +41,30 @@ conditions:
         email: "updatecli@olblak.com"
         owner: "olblak"
         repository: "charts"
-        token: {{ requiredEnv "GITHUB_TOKEN" }}
+        token: '{{ requiredEnv "GITHUB_TOKEN" }}'
         username: "olblak"
         branch: "master"
 targets:
   updateENVHELMVERSION:
-    name: Update the 2nd element of the 2nd ENV instruction to the source value
-    kind: dockerfile
+    name: 'Update the 2nd element of the 2nd "ENV" instruction to the source value'
+    kind: "dockerfile"
     spec:
-      file: docker/Dockerfile
-      Instruction: ENV[1][1]
+      file: "docker/Dockerfile"
+      Instruction: "ENV[1][1]"
     scm:
       github:
         user: "updatecli"
         email: "updatecli@olblak.com"
         owner: "olblak"
         repository: "charts"
-        token: {{ requiredEnv "GITHUB_TOKEN" }}
+        token: '{{ requiredEnv "GITHUB_TOKEN" }}'
         username: "olblak"
         branch: "master"
   updateARGTERRAFORMVERSION:
-    name: Update all ARG instructions starting with HELM_VERSION
-    kind: dockerfile
+    name: "Update all ARG instructions starting with HELM_VERSION"
+    kind: "dockerfile"
     spec:
-      file: Dockerfile
+      file: "Dockerfile"
       instruction:
         keyword: "ARG"
         matcher: "TERRAFORM_VERSION"
@@ -74,6 +74,6 @@ targets:
         email: "updatecli@olblak.com"
         owner: "olblak"
         repository: "charts"
-        token: {{ requiredEnv "GITHUB_TOKEN" }}
+        token: '{{ requiredEnv "GITHUB_TOKEN" }}'
         username: "olblak"
         branch: "master"
