--- a/examples/updatecli.d/noYamlConditionScm.yaml
+++ b/examples/updatecli.d/noYamlConditionScm.yaml
@@ -1,6 +1,6 @@
 sources:
   lastHelmRelease:
-    kind: helmChart
+    kind: helmchart
     spec:
       url: https://grafana.github.io/loki/charts
       name: loki
