--- a/examples/updatecli.d/pluginsite-api.yaml
+++ b/examples/updatecli.d/pluginsite-api.yaml
@@ -1,13 +1,13 @@
 sources:
   lastGitHubRelease:
-    kind: githubRelease
+    kind: githubrelease
     name: "Get latest pluginsite version"
     spec:
       owner: "jenkins-infra"
       repository: "plugin-site-api"
-      token: {{ requiredEnv "GITHUB_TOKEN" }}
+      token: '{{ requiredEnv "GITHUB_TOKEN" }}'
       username: "olblak"
-      versionFilter:
+      versionfilter:
         kind: latest
 targets:
   imageTag:
@@ -16,32 +16,24 @@ targets:
     spec:
       file: "charts/plugin-site/values.yaml"
       key: "backend.image.tag"
-    scm:
-      github:
-        user: "{{ .github.user }}"
-        email: "{{ .github.email }}"
-        owner: "{{ .github.owner }}"
-        repository: "{{ .github.repository }}"
-        token: "{{ requiredEnv .github.token }}"
-        username: "{{ .github.username }}"
-        branch: "{{ .github.branch }}"
+    scmid: default
+
   appVersion:
     name: "Update Chart appVersion"
     kind: yaml
+    scmid: default
     spec:
       file: "charts/plugin-site/Chart.yaml"
       key: appVersion
-    scm:
-      github:
-        user: "{{ .github.user }}"
-        email: "{{ .github.email }}"
-        owner: "{{ .github.owner }}"
-        repository: "{{ .github.repository }}"
-        token: "{{ requiredEnv .github.token }}"
-        username: "{{ .github.username }}"
-        branch: "{{ .github.branch }}"
-#      git:
-#        url: "git@github.com:olblak/charts.git"
-#        branch: "updatecli/Helm_Chart/2.3.3"
-#        user: "update-bot"
-#        email: "update-bot@olblak.com"
+
+scms:
+  default:
+    kind: github
+    spec:
+      user: "{{ .github.user }}"
+      email: "{{ .github.email }}"
+      owner: "{{ .github.owner }}"
+      repository: "{{ .github.repository }}"
+      token: "{{ requiredEnv .github.token }}"
+      username: "{{ .github.username }}"
+      branch: "{{ .github.branch }}"
