--- a/examples/updatecli.d/updatecli.yaml
+++ b/examples/updatecli.d/updatecli.yaml
@@ -1,48 +1,46 @@
 sources:
   lastGitHubRelease:
-    kind: githubRelease
+    kind: githubrelease
     spec:
       owner: olblak
       repository: updatecli
-      token: {{ requiredEnv "GITHUB_TOKEN" }}
+      token: '{{ requiredEnv "GITHUB_TOKEN" }}'
       username: olblak
-      versionFilter:
+      versionfilter:
         kind: latest
+
 conditions:
   dockerFile:
     name: isDockerfileCorrect
     kind: dockerfile
     spec:
       file: Dockerfile
-      Instruction:
+      instruction:
         keyword: "FROM"
         matcher: "golang:1.14"
-    scm:
-      github:
-        user: "updatecli"
-        email: "updatecli@olblak.com"
-        owner: "olblak"
-        repository: "updatecli"
-        token: {{ requiredEnv "GITHUB_TOKEN" }}
-        username: "olblak"
-        branch: main
+    scmid: default
+
 targets:
   dockerFile:
     name: "isDockerfileCorrect"
     kind: dockerfile
     spec:
       file: Dockerfile
-      Instruction:
+      instruction:
         keyword: "FROM"
         matcher: "golang:1.14"
     transformers:
       - addPrefix: "olblak/updatecli:"
-    scm:
-      github:
-        user: "updatecli"
-        owner: "olblak"
-        repository: "updatecli"
-        token: {{ requiredEnv "GITHUB_TOKEN" }}
-        username: "olblak"
-        branch: main
-        email: "update-bot@olblak.com"
+    scmid: default
+
+scms:
+  default:
+    kind: github
+    spec:
+      user: "updatecli"
+      owner: "olblak"
+      repository: "updatecli"
+      token: '{{ requiredEnv "GITHUB_TOKEN" }}'
+      username: "olblak"
+      branch: main
+      email: "update-bot@olblak.com"
