--- a/e2e/updatecli.d/source/githubRelease.yaml
+++ b/e2e/updatecli.d/source/githubRelease.yaml
@@ -16,11 +16,11 @@ scms:
 sources:
   helm:
     name: Get Latest helm release version
-    kind: githubRelease
+    kind: githubrelease
     spec:
       owner: "updatecli"
       repository: "updatecli"
       token: '{{ requiredEnv .github.token }}'
       username: '{{ requiredEnv .github.username }}'
-      versionFilter:
+      versionfilter:
         kind: latest
