Move test e2e test_diff in e2e/updatecli.d/success.d
Signed-off-by: Olblak <me@olblak.com>

--- a/e2e/venom.d/test_diff.yaml
+++ b/e2e/venom.d/test_diff.yaml
@@ -7,7 +7,7 @@ vars:
 testcases:
   - name: "Test updatecli diff shouldn't fail"
     steps:
-      - script: '{{ .binpath }}/updatecli diff --config  ../updatecli.d/ --values ../values.yaml'
+      - script: '{{ .binpath }}/updatecli diff --config  ../updatecli.d/success.d --values ../values.yaml'
         type: 'exec'
         assertions:
           - 'result.code ShouldEqual 0'
